# hw_28

./: pyproject.toml  pytest.ini
ads/: ad_urls.py  models.py  serializer.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_selection.py  0004_category_slug_alter_ad_description_and_more.py
hw_28/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_options_rename_user_name_user_username.py  0004_alter_location_name.py  0005_alter_user_managers_user_date_joined_user_email_and_more.py  0006_user_birth_date_alter_user_email.py
